--- a/musica.html
+++ b/musica.html
@@ -1,14 +1,178 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+
 <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <title>Blog de Música</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
    <script src="main.js"></script>
 </head>
+
 <body>
-   
+   <header class="bg-warning p-2">
+      <nav class="navbar container">
+         <a class="navbar-brand"><img src="img/musica.svg" width="70%"></a>
+         <ul class="nav justify-content-end">
+            <li class="nav-item">
+               <a class="nav-link text-dark" href="#"><i class="fab fa-youtube"></i></a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link text-dark" href="#"><i class="fab fa-facebook-square"></i></a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link text-dark" href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link text-dark" href="#"><i class="fab fa-pinterest-square"></i></a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link text-dark" href="#"><i class="fab fa-twitter-square"></i></a>
+            </li>
+         </ul>
+      </nav>
+   </header>
+   <section class="bg-dark p-3">
+      <nav class="nav nav-pills flex-column flex-sm-row container">
+         <a class="flex-sm-fill text-sm-center nav-link active bg-warning text-dark" href="#">Inicio</a>
+         <a class="flex-sm-fill text-sm-center nav-link text-white" href="#">Artistas</a>
+         <a class="flex-sm-fill text-sm-center nav-link text-white" href="#">Grupos</a>
+         <a class="flex-sm-fill text-sm-center nav-link text-white" href="#">Top 10</a>
+         <a class="flex-sm-fill text-sm-center nav-link text-white" href="#">Letras</a>
+         <a class="flex-sm-fill text-sm-center nav-link text-white" href="#">Acordes</a>
+      </nav>
+   </section>
+   <section class="pt-3 mt-2">
+      <div class="container">
+         <div class="row mb-2">
+            <div class="col-lg-9 pr-5">
+               <div class="row mb-2">
+                  <div class="col-lg-9">
+                     <div class="">
+                        <a href="#">
+                           <h2>Rage Against The Machine</h2>
+                        </a>
+                        <p>Hace casi 20 años el grupo de Los Ángeles decidió dar fin a su agrupación, 7 años más tarde
+                           lograron la reconciliación para simplemente dar giras y satisfacer a todos sus fans por el
+                           mundo hasta el 2011.
+                           Estas reunión que duró 4 años simplemente fue para eso, tocar su música y demostrar que los
+                           artistas seguían en pie de lucha.
+                        </p>
+                        <p>Rage Against The Machine dejó un gran legado y gracias a ellos su ex integrantes a formado
+                           diferentes proyectos con un gran nivel de aceptación por la crítica en general.</p>
+                     </div>
+                  </div>
+                  <div class="col-lg-3">
+                     <img class="img-fluid" src="img/rage.jpg">
+                     <div class="bg-warning p-3" style="margin-top: -160px; position: relative; width: 56%;">
+                        <h5>30</h5>
+                        <h6>Marzo, 2019</h6>
+                     </div>
+                  </div>
+                  <form class="mt-4 col-12">
+                     <div class="row">
+                        <div class="form-group col-sm-9">
+                           <textarea class="form-control" name="message" id="message" rows="1"
+                              placeholder="Deja tu Comentario"></textarea>
+                        </div>
+                        <div class="col-sm-3">
+                           <button type="submit" value="submit" class="bg-warning btn submit_btn form-control">ENVIAR <i
+                                 class="fas fa-caret-right bg-warning"></i></button>
+                        </div>
+                     </div>
+                  </form>
+               </div>
+               <div class="row mb-2 mt-2">
+                  <div class="col-lg-3">
+                     <div class="" style="background-image: url('img/rage2.jpg'); width: 100%; height: 256px; background-position: center center; background-size: cover;"></div>
+                     <div class="bg-warning p-3" style="margin-top: -160px; position: relative; width: 56%;">
+                        <h5>30</h5>
+                        <h6>Marzo, 2019</h6>
+                     </div>
+                  </div>
+                  <div class="col-lg-9">
+                     <div class="">
+                        <a href="#">
+                           <h2>Prophets Of Rage</h2>
+                        </a>
+                        <p>Hace casi 20 años el grupo de Los Ángeles decidió dar fin a su agrupación, 7 años más tarde
+                           lograron la reconciliación para simplemente dar giras y satisfacer a todos sus fans por el
+                           mundo hasta el 2011.
+                           Estas reunión que duró 4 años simplemente fue para eso, tocar su música y demostrar que los
+                           artistas seguían en pie de lucha.
+                        </p>
+                        <p>Rage Against The Machine dejó un gran legado y gracias a ellos su ex integrantes a formado
+                           diferentes proyectos con un gran nivel de aceptación por la crítica en general.</p>
+                     </div>
+                  </div>
+                  <form class="mt-4 col-12">
+                     <div class="row">
+                        <div class="form-group col-sm-9">
+                           <textarea class="form-control" name="message" id="message" rows="1"
+                              placeholder="Deja tu Comentario"></textarea>
+                        </div>
+                        <div class="col-sm-3">
+                           <button type="submit" value="submit" class="bg-warning btn submit_btn form-control">ENVIAR <i class="fas fa-caret-right bg-warning"></i></button>
+                        </div>
+                     </div>
+                  </form>
+               </div>
+            </div>
+            <div class="col-lg-3 ">
+               <div class="d-none d-lg-block">
+                  <aside class="">
+                     <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" aria-label="Search">
+                        <span class="input-group-btn">
+                           <button class="btn btn-secondary" type="button"><i class="fa fa-search"></i></button>
+                        </span>
+                     </div>
+                  </aside>
+                  <aside class="mt-3">
+                     <div class="">
+                        <h3>Categorías</h3>
+                     </div>
+                     <ul>
+                        <li><a href="#">RATM</a></li>
+                        <li><a href="#">Public Enemy</a></li>
+                        <li><a href="#">Discografía</a></li>
+                        <li><a href="#">Prophets of Rage</a></li>
+                        <li><a href="#">Tom Morello</a></li>
+                        <li><a href="#">Zach de la Rocha</a></li>
+                     </ul>
+                  </aside>
+                  <aside class="">
+                     <div class="">
+                        <h3>Tags</h3>
+                     </div>
+                     <ul>
+                        <li><a href="#">Rap Metal</a></li>
+                        <li><a href="#">RATM</a></li>
+                        <li><a href="#">Música</a></li>
+                        <li><a href="#">Lives</a></li>
+                        <li><a href="#">Giras</a></li>
+                        <li><a href="#">Noticias</a></li>
+                     </ul>
+                  </aside>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+   </script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+   </script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+   </script>
 </body>
+
 </html>
